<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright 2021 ChenJun (power4j@outlook.com & https://github.com/John-Chan)
  ~
  ~  Licensed under the GNU LESSER GENERAL PUBLIC LICENSE 3.0;
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~  <p>
  ~  http://www.gnu.org/licenses/lgpl.html
  ~  <p>
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.power4j.fist3</groupId>
    <artifactId>fist-kit-infra</artifactId>
    <version>${revision}</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>fist-logback</artifactId>
  <name>${project.artifactId}</name>

  <properties>
    <maven.compiler.release>8</maven.compiler.release>
    <maven.compiler.testRelease>17</maven.compiler.testRelease>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jspecify</groupId>
      <artifactId>jspecify</artifactId>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <scope>provided</scope>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>com.power4j.fist3</groupId>
      <artifactId>fist-support-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
